# hot-dog

./: .aider.chat.history.md  .aider.input.history  .gitignore  Cargo.toml  README.md  dogs.txt  hotdog.db
.aider.tags.cache.v4/: cache.db
src/: guide_backend.rs  guide_databases.rs  main.rs
src/components/: mod.rs  nav.rs
