[package]
name = "hot-dog"
version = "0.1.0"
authors = ["Nikolas (Daniel) Vincenti <165183152+NikVince@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["fullstack", "router"] } # Enable the fullstack feature directly
dioxus_server_macro = "0.6.2"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
rusqlite = { version = "0.32.1", optional = true } 

[features]
server = ["dioxus/server", "dep:rusqlite"] 

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
